# ChangeLog for xfce-base/xfce4-session
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*xfce4-session-4.5.93 (14 Jan 2009)

  14 Jan 2009; Christoph Mende <angelos@gentoo.org>
  +xfce4-session-4.5.93.ebuild:
  Xfce-4.6 beta3

*xfce4-session-4.5.92 (14 Nov 2008)

  14 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +xfce4-session-4.5.92.ebuild:
  Xfce-4.6 Beta 2 bump

  09 Nov 2008; Christoph Mende <angelos@gentoo.org>
  xfce4-session-9999.ebuild:
  Fix dependencies, dbus is mandatory now

  23 Jun 2008; Christoph Mende <angelos@gentoo.org>
  xfce4-session-9999.ebuild:
  Migrated from mcs to xfconf

  18 Dec 2007; Christoph Mende <angelos@gentoo.org>
  xfce4-session-9999.ebuild:
  Added missing intltool dependency

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
