@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST xfce4-session-4.5.92.tar.bz2 1332462 RMD160 486f00eef66cf2d43a62e857af8ad034cdaf0b73 SHA1 e86b2affe1b2b88bb18c6dfeb0d410e85420789d SHA256 49be644f0f9783b3a154ea69346bcf817ac94fe18b0bfb06866fccb0e45f2dce
 DIST xfce4-session-4.5.93.tar.bz2 1357390 RMD160 e8af17237d3617d51588863468ee39f9ccdde019 SHA1 922ac2b38b593b20a6b4315e05aae92fc5f4c790 SHA256 bd16788eb87f4cb49416346c0567b0ccc73e482be90ae649bcaa7741b594ad61
+DIST xfce4-session-4.5.99.1.tar.bz2 1355808 RMD160 625fdcee8a6d1673c4d3b65b732106baa678e730 SHA1 3ea96baa81a1c31ac785087151ba9d606ae51c12 SHA256 0700f8a01c8c45a8404a34f00e3cdcff0b7b3b8efe320988911e9e3f433d350c
 EBUILD xfce4-session-4.5.92.ebuild 826 RMD160 b3ac946f1f2604a64e1a3c2e2223bb570d84b0b9 SHA1 5120265de9a94a99b59a5f7d10ecdae1ea1cb92c SHA256 3912d2cfb1e53562d9789c8a507611e8c247d8b06e22e3a49508a2401659f613
 EBUILD xfce4-session-4.5.93.ebuild 826 RMD160 b3ac946f1f2604a64e1a3c2e2223bb570d84b0b9 SHA1 5120265de9a94a99b59a5f7d10ecdae1ea1cb92c SHA256 3912d2cfb1e53562d9789c8a507611e8c247d8b06e22e3a49508a2401659f613
+EBUILD xfce4-session-4.5.99.1.ebuild 826 RMD160 b3ac946f1f2604a64e1a3c2e2223bb570d84b0b9 SHA1 5120265de9a94a99b59a5f7d10ecdae1ea1cb92c SHA256 3912d2cfb1e53562d9789c8a507611e8c247d8b06e22e3a49508a2401659f613
 EBUILD xfce4-session-9999.ebuild 826 RMD160 b3ac946f1f2604a64e1a3c2e2223bb570d84b0b9 SHA1 5120265de9a94a99b59a5f7d10ecdae1ea1cb92c SHA256 3912d2cfb1e53562d9789c8a507611e8c247d8b06e22e3a49508a2401659f613
-MISC ChangeLog 846 RMD160 f6e46dddaa4ec2d7c754b68906ee2379b9a4cde2 SHA1 88660760b5b0d812a87272d7e1eb04aa479a677e SHA256 df12341d0bcafd94be6a0bfa1eac7f8e907b7849b0e49f05a808ac41390404b4
+MISC ChangeLog 987 RMD160 2b0b9189ee8c9ddd0f2aee8e88d13bf8137c2c7e SHA1 e644ed62ec576e614cbcfb8dd4f077488a557132 SHA256 1618753f91a81744b2bda6f6ea2bbc7bb881d62782d2964e2feae100e407e858
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluEYcACgkQKhnDs22gwa8hMwCfav3KnvIRluG+wToFPDflJmxs
-mg8AoOhHHoi+jTJvAks67cGxVvbxLCZN
-=NgaZ
+iEYEARECAAYFAkl9xa8ACgkQKhnDs22gwa//XACaA2j4dAZqPCj398F3X/siH7+1
+KW0AoPCRqq/SBUuL+7sHvSoiVv+FiO67
+=FxFf
 -----END PGP SIGNATURE-----
